--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/workspace.xml
+*/.idea/workspace.xml
 .idea/tasks.xml
 
 # Sensitive or high-churn files:
