--- a/.gitignore
+++ b/.gitignore
@@ -19,50 +19,50 @@ hs_err_pid*
 
 # User-specific stuff:
 */.idea/workspace.xml
-.idea/tasks.xml
+*/.idea/tasks.xml
 
 # Sensitive or high-churn files:
-.idea/dataSources/
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+*/.idea/dataSources/
+*/.idea/dataSources.ids
+*/.idea/dataSources.xml
+*/.idea/dataSources.local.xml
+*/.idea/sqlDataSources.xml
+*/.idea/dynamic.xml
+*/.idea/uiDesigner.xml
 
 # Gradle:
-.idea/gradle.xml
-.idea/libraries
+*/.idea/gradle.xml
+*/.idea/libraries
 
 # Mongo Explorer plugin:
-.idea/mongoSettings.xml
+*/.idea/mongoSettings.xml
 
 ## File-based project format:
-*.iws
+*/*.iws
 
 ## Plugin-specific files:
 
 # IntelliJ
-/out/
+*/out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+*/.idea_modules/
 
 # JIRA plugin
-atlassian-ide-plugin.xml
+*/atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+*/com_crashlytics_export_strings.xml
+*/crashlytics.properties
+*/crashlytics-build.properties
+*/fabric.properties
 
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+# */*.iml
+# */modules.xml
+# */.idea/misc.xml
+# */*.ipr
 
 # End of https://www.gitignore.io/api/intellij
